[gd_scene load_steps=10 format=3 uid="uid://cfjhlkpf7gs5n"]

[ext_resource type="Script" path="res://Assets/Scripts/cardControllerOponente.gd" id="1_1yrqw"]
[ext_resource type="Texture2D" uid="uid://cbrral28m3rse" path="res://Assets/Textures/cardPlaceholder.jpg" id="2_qy0t1"]
[ext_resource type="Theme" uid="uid://dvsojcmw5svs1" path="res://Assets/Themes/label_ingame.tres" id="3_6flb5"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/card_state_machine.gd" id="4_2yn8c"]
[ext_resource type="Texture2D" uid="uid://8owkkp6domqv" path="res://icon.svg" id="4_30von"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/idle_oponente.gd" id="5_e5g5f"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/dragged_spell_oponente.gd" id="6_qw18x"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/aim_spell_oponente.gd" id="7_4au61"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8611"]
size = Vector2(169, 238)

[node name="CartaUI" type="Control"]
custom_minimum_size = Vector2(170, 238)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -119.0
offset_right = 85.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(66, 92.5)
mouse_filter = 1
script = ExtResource("1_1yrqw")

[node name="on_hand" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="on_hand_tex" type="TextureRect" parent="on_hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qy0t1")
expand_mode = 1
stretch_mode = 5

[node name="Nombre" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -89.0
offset_right = 30.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_6flb5")
theme_override_font_sizes/font_size = 30
text = "pipo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Coste" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 37.0
grow_horizontal = 2
theme = ExtResource("3_6flb5")
theme_override_font_sizes/font_size = 20
text = "74"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Descripcion" type="Label" parent="on_hand"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -59.0
offset_right = 68.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_6flb5")
theme_override_font_sizes/font_size = 12
text = "Hago esto jeje"
horizontal_alignment = 1
autowrap_mode = 2

[node name="on_board" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 170.0
offset_bottom = 238.0
mouse_filter = 2

[node name="on_board_tex" type="TextureRect" parent="on_board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -76.0
offset_right = 80.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_30von")

[node name="detectorColision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectorColision"]
position = Vector2(85, 119)
shape = SubResource("RectangleShape2D_i8611")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("card", "current_state")]
script = ExtResource("4_2yn8c")
card = NodePath("..")
current_state = NodePath("idleState")

[node name="idleState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("dragged_state")]
script = ExtResource("5_e5g5f")
dragged_state = NodePath("../draggedState")

[node name="draggedState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("idle_state", "aim_state")]
script = ExtResource("6_qw18x")
idle_state = NodePath("../idleState")
aim_state = NodePath("../aimState")

[node name="aimState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("7_4au61")
idle_state = NodePath("../idleState")

[connection signal="area_entered" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_entered"]
[connection signal="area_exited" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_exited"]
[connection signal="mouse_entered" from="detectorColision" to="." method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_entered" from="detectorColision" to="CardStateMachine/idleState" method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_entered" from="detectorColision" to="CardStateMachine/aimState" method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_exited" from="detectorColision" to="." method="_on_detector_colision_mouse_exited"]
[connection signal="mouse_exited" from="detectorColision" to="CardStateMachine/idleState" method="_on_detector_colision_mouse_exited"]
[connection signal="mouse_exited" from="detectorColision" to="CardStateMachine/aimState" method="_on_detector_colision_mouse_exited"]
